--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,18 @@ android {
         applicationId "it.pgp.grimaldo"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 112191204
-        versionName "1.1.2"
+        versionCode 113191205
+        versionName "1.1.3"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            minifyEnabled false
         }
     }
     compileOptions {
